# gmock-global

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE
.github/workflows/: ci.yml
include/gmock-global/: gmock-global.h
include/gmockglobal/: gmockglobal.h
sample/: CMakeLists.txt  main.cpp
